# sixtracklib_gsoc18

./: README.md
documentation/: concepts.md  formulas.md  loops.md  particles.md  protocol.md  terminology_gpu.md  track_signatures.md
initial_test/: makefile  opencl-try1.cpp  vectorSum_double.c  vectorSum_double.py  vectorSum_int.c  vectorSum_int.py
initial_test/reduce_opencl/: .hello.cpp.swp  makefile  reduce  reduce.cpp
initial_test/reduce_opencl_timed/: makefile  reduce.cpp
initial_test/reduce_opencl_v1/: makefile  reduce_v1.cpp  reduce_v1a.cpp
initial_test/reduce_opencl_v1_timed/: .reduce_v1.cpp.swp  reduce_v1.cpp
initial_test/reduce_opencl_v2/: makefile  reduce_v2a.cpp  reduce_v2b.cpp  stats.sh
initial_test/reduce_opencl_v3/: makefile  reduce_v2a  reduce_v2a.cpp  reduce_v2a_1.cpp  reduce_v2b  reduce_v2b.cpp  reduce_v2b_1.cpp
initial_test/sixtrack-v0/: CMakeLists.txt  Readme.md  benchmarking_allinonekernel_AMDRayzen8Core-final.txt  benchmarking_allinonekernel_IntelXeon40core-final.txt  benchmarking_allinsequence_IntelXeon40core-final.txt  benchmarking_gpu-amdRX560-baseline  benchmarking_gpu-nvidia-baseline  benchmarking_oneatatime_align_GTX1080-final.txt  benchmarking_oneatatime_cavity_GTX1080-final.txt  benchmarking_oneatatime_drift_GTX1080-final.txt  benchmarking_oneatatime_drift_V100-final.txt  benchmarking_oneatatime_drift_exact_IntelXeon40core-final.txt  benchmarking_switchcaseoncpu_AMDRayzen8Core-final.txt  benchmarking_switchcaseoncpu_GTX1080-final.txt  benchmarking_switchcaseoncpu_V100-final.txt  benchmarking_switchcaseoncpuremoved_V100-final.txt  cases-to-cover.txt  drift_cpu.cpp  kernels.cl  kernels_beam_elements.cl  kernels_beam_elements_oneatatime.cl  kernels_beam_elements_opt1.cl  kernels_beam_elements_opt2.cl  kernels_beam_elements_switchcaseoncpu.cl  parallel_beam_elements-finalversion.cpp  parallel_beam_elements.cpp  parallel_beam_elements_allinsequence.cpp  parallel_beam_elements_oneatatime.cpp  parallel_beam_elements_opt1.cpp  parallel_beam_elements_opt2.cpp  parallel_beam_elements_opt3.cpp  parallel_beam_elements_switchcaseoncpu.cpp  parallel_beam_elements_switchcaseoncpuremoved.cpp  parallel_drift.cpp  parallel_drift_cleanedup.cpp  stats-gpu.sh  stats.sh  stats_cpu.sh
initial_test/sixtrack-v0/additional_results/: benchmarking_cpu-pocl-baseline  benchmarking_cpu-pocl-techlab-baseline  benchmarking_gpu-nvidiaGTX1050Ti-baseline-drift_exact_only  benchmarking_gpu-nvidiaGTX1050Ti-baseline-drift_only  benchmarking_gpu-nvidiaV100-baseline
initial_test/sixtrack-v0/benchmarking_results/: benchmarking_allinonekernel_AMDRadeonRX560-final.txt  benchmarking_allinonekernel_GTX1050Ti-final.txt  benchmarking_allinonekernel_GTX1080-final.txt  benchmarking_allinonekernel_V100-final.txt  benchmarking_allinsequence_AMDRadeonRX560-final.txt  benchmarking_allinsequence_AMDRayzen8Core-final.txt  benchmarking_allinsequence_GTX1050Ti-final.txt  benchmarking_allinsequence_GTX1080-final.txt  benchmarking_allinsequence_V100-final.txt  benchmarking_oneatatime_align_IntelXeon40core-final.txt  benchmarking_oneatatime_align_V100-final.txt  benchmarking_oneatatime_cavity_IntelXeon40core-final.txt  benchmarking_oneatatime_cavity_V100-final.txt  benchmarking_oneatatime_drift_IntelXeon40core-final.txt  benchmarking_oneatatime_drift_exact_GTX1080-final.txt  benchmarking_oneatatime_drift_exact_V100-final.txt  benchmarking_switchcaseoncpu_AMDRadeonRX560-final.txt  benchmarking_switchcaseoncpu_GTX1050Ti-final.txt  benchmarking_switchcaseoncpu_IntelXeon40core-final.txt  benchmarking_switchcaseoncpuremoved_AMDRadeonRX560-final.txt  benchmarking_switchcaseoncpuremoved_AMDRayzen8Core-final.txt  benchmarking_switchcaseoncpuremoved_GTX1050Ti-final.txt
studies/: readme
studies/study0/: hello.cpp  makefile
studies/study1/: demo.py  particles_cl.h  sixtracklib.py  sixtracklib_cl.c  sixtracklib_cl.h  track.h  track_test.c
studies/study2/: elements.py  flatobject.py  test_flatobj.py
studies/study3/: ex1.cpp  makefile
studies/study4/: drift.h  particles_aos.h  track.h  track_cl.c  type_parameters_cl.h  type_parameters_vect.h
studies/study5/: alignment_ctypes.py  ex_cffi.py
studies/study6/: code.c  pyopencl_example.py
studies/study7/: DAvector.cpp
studies/study8_martin/: CMakeLists.txt  Readme.md  test_particles.cpp  use_blocks.cpp
studies/study9/: makefile  test.c
